src/test/deca/context/invalid/declaVariable-wrongType.context
declaVariable-wrongType.deca:11
